W-13761983: Add module-info to mule services